--- a/cardtracker-web/public/global.css
+++ b/cardtracker-web/public/global.css
@@ -41,6 +41,15 @@ input, button, select, textarea {
 	border: 1px solid rgb(226, 226, 226);
 	border-radius: 2px;
 }
+
+input, select {
+	width: 30%
+}
+
+input[type="checkbox"] {
+	cursor: pointer;
+}
+
 input[type=submit] {
 	display: block;
 	cursor: pointer;
@@ -48,6 +57,11 @@ input[type=submit] {
 
 input:disabled {
 	color: rgb(146, 145, 145);
+}
+
+#delete {
+	background-color: rgb(167, 70, 70);
+	color: white;
 }
 
 /* buttons */
