Work on adding a card cleanly

--- a/cardtracker-web/public/global.css
+++ b/cardtracker-web/public/global.css
@@ -4,6 +4,13 @@ html, body {
 	height: 100%;
 }
 
+/* reset */
+ul {
+	padding: 0px;
+	margin: 0px;
+	list-style-type: none;
+}
+
 body {
 	color: #333;
 	margin: 0;
