--- a/cardtracker-web/public/global.css
+++ b/cardtracker-web/public/global.css
@@ -24,13 +24,13 @@ a {
 	color: rgb(0,100,200);
 	text-decoration: none;
 }
-
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
+	color: rgb(0,90,150);
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0,100,200);
 }
 
 /* forms */
